# boxed-slice-vec

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  safety.yml  test.yml
src/: error.rs  extend.rs  iter.rs  lib.rs
tests/: tests.rs
